pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError9.pkl
local a = new Listing { new Foo {} }
local b = (a) { new Bar {} }
local c = b as Listing<Bar>
local d = (c) { new Foo {} }
local e = d as Listing<Foo>

result = e

open class Foo
class Bar extends Foo
